Fix: Header (spacing between items), Add: login icon

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,7 +15,8 @@
   width: 100%;
   gap: 10px;
 
-  grid-template-columns: repeat(4, 1fr); /* 4 equal columns */
+  grid-template-columns: repeat(4, 1fr);
+  /* 4 equal columns */
   grid-template-rows: 100px auto auto auto 50px;
   grid-template-areas:
     "Columns Columns Columns Columns"
@@ -25,7 +26,7 @@
     "end end end end";
 }
 
-.Header {
+/* .Header {
   grid-area: Columns;
   width: 100%;
   height: 100px;
@@ -35,13 +36,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
 
 .main {
   grid-area: content;
   padding: 2rem;
   /* background-color: grey; */
 }
+
 .aside {
   grid-area: right;
   padding: 2rem;
