--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -1,40 +1,83 @@
-.headerbar {
+.header {
   display: flex;
-  justify-content: space-between; /* Space out the main sections */
-  align-items: center; /* Align items vertically */
-  width: 100%; /* Full width of header */
-  max-width: 1280px; /* Restrict width */
-  margin: 0 auto; /* Center the header content */
-  color: #191919;
-  font-size: larger;
-  font-weight: bold;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 8px 20px;
+  background-color: #e6e6e6;
+  color: #c83131;
 }
 
 .logo {
-  flex: 0 0 auto; /* Keep the logo fixed on the left */
   display: flex;
-  align-items: center; /* Vertically align */
+  align-items: center;
+  justify-content: center;
+  height: 65px;
 }
 
-.logo img {
-  display: block;
-  width: 6em; /* Adjust logo size */
-  height: auto; /* Maintain aspect ratio */
+.logo-img {
+  height: 70px;
+  width: auto;
 }
 
-.nav-links {
-  padding: 0.5rem;
+button {
+  background-color: transparent;
+  border: none;
+  color: #191919;
+  font-size: 20px;
+  cursor: pointer;
+  font-weight: bold;
 }
 
-.nav-links a {
+button:hover {
+  color: #aa3030;
+}
+
+button:focus {
+  outline: none;
+}
+
+
+.navbar {
+  display: flex;
+  justify-content: center;
+  flex-grow: 1;
+}
+
+.navbar ul {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar li {
+  margin: 9px 20px;
+  font-weight: bold;
+}
+
+.navbar a {
   color: #191919;
   text-decoration: none;
-  padding: 30px;
+  font-size: 20px;
 }
 
-.nav-links a:hover {
-  text-decoration: underline;
+.navbar a:hover {
   color: #aa3030;
+}
+
+.login {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  cursor: pointer;
+  font-weight: bold;
+  color: #191919;
+}
+
+.login i {
+  margin-right: 10px;
+
 }
 
 .login:hover {
